@@ -10,6 +10,7 @@ ChangeLog
     * checked state flag support
     * Error states iteration support
     * Added m_timestamp to file attributes
+    * Command classes store both args and kwargs.
 
 0.4.0 (2021-03-30)
     * new CONNECTION_TIOMEOUT constant set to 30s
